# WR

./: CMakeLists.txt
src/: CMakeLists.txt  cell.cpp  cell.hpp  coords.cpp  coords.hpp  creature.cpp  creature.hpp  field.cpp  field.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  rabbit.cpp  randomgenerator.cpp  wolf.cpp
